<resources>
    <string name="app_name">common</string>

    <string name="validateInfant">تعداد نوزاد با بزرگسال برابر نیست </string>
    <string name="validateChild">حداقل یک بزرگسال را باید انتخاب کنید </string>

    <string name="adults">بزرگسال</string>
    <string name="children">کودک</string>
    <string name="infant">نوزاد</string>
    <string name="shahed">شاهد</string>
    <string name="veteran">جانباز</string>
    <string name="pricePerPersonSingle">قیمت تک نفر (single)</string>
    <string name="readMore">ادامه</string>
    <string name="readLess">بستن</string>
    <string name="lawAdults">بزگتر از 12 سال (بزرگسال)</string>
    <string name="lawChildren">کمتر از 12 سال (کودک)</string>
    <string name="lawInfant">کمتر از 2 سال (نوزاد)</string>
    <string name="acceptEng">Accept</string>
    <string name="ok">تایید</string>
    <string name="stopsTitle">تعداد توقف</string>
    <string name="msgErrorNoFlightReturn">پروازی برای برگشت وجود ندارد</string>
    <string name="newSearch">جستجو جدید</string>
    <string name="roomEng">Room</string>
    <string name="roomsEng">Rooms</string>
    <string name="normalPassenger">مسافرین عادی</string>
    <string name="manPassenger">ویژه برادران</string>
    <string name="womanPassenger">ویژه خواهران</string>
    <string name="validateNationalCode">کد ملی را با دقت وارد کنید</string>
    <string name="validateBirthDayChild">تاریخ تولد کودک باید بین  2 تا 11 سال باشد</string>
    <string name="validateBirthDayInfants">تاریخ تولد نوزاد باید کمتر از 2 سال باشد</string>
    <string name="validateBirthDayAdults">تاریخ تولد بزرگسال باید بیش از 12 سال باشد</string>

    <string name="flyingFrom">مبدا را انتخاب کنید</string>
    <string name="flyingTo">مقصد را انتخاب کنید</string>

    <string name="msgErrorPayment">خطا در دسترسی به اطلاعات ،لطفا با پشتیبانی تماس بگیرید </string>
    <string name="typeCityAndAirport">شهر یا فرودگاه مورد نظر را وارد کنید </string>


    <string name="typeCity">شهر مورد نظر را وارد کنید </string>

    <string name="rules">قوانین</string>
    <string name="details">جزییات</string>
    <string name="capacity">بار</string>


    <string name="domesticTour">داخلی</string>
    <string name="InternationalTour">خارجی</string>
    <string name="dayTour">یک روزه</string>
    <string name="allTour">همه</string>

    <string name="domesticHotel">هتل داخلی</string>
    <string name="internationalHotel">هتل خارجی</string>

    <string name="countPassenger">تعداد مسافر</string>
    <string name="typeTicketTrain">نوع بلیط</string>


    <string name="copeFull">برای داشتن کوپه دربست لطفا تیک کوپه دربست رو بزنید.</string>
    <string name="msgErrorExpireTimeTitle">زمان شما برای رزرو به پایان رسید</string>
    <string name="msgErrorExpireTimeDesc">با توجه به امکان تغییر نرخ ، بهتر است جستجوی مجدد انجام دهید</string>
    <string name="back">بازگشت</string>

    <string name="adultEng">Adult</string>
    <string name="childEng">Child</string>

    <string name="accept_">تایید میکنم</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="addCountPassenger">تعداد مسافر </string>
    <string name="oneWay">یک طرفه</string>
    <string name="twoWay">دوطرفه</string>

    <string-array name="passengerHotel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string-array name="passengerHotelChild">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
