<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutErrorMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTitleCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/msgErrorExpireTimeTitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/main_color_grey_900" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/msgErrorExpireTimeDesc"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/main_color_grey_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/back"
            android:textColor="@color/styleConfigMasterButton2Title"
            app:backgroundTint="@color/styleConfigMasterButton2Background" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/tvButtonRetry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/newSearch"
            android:textColor="@color/styleConfigMasterButtonTitle"
            app:backgroundTint="@color/styleConfigMasterButtonBackground" />
    </LinearLayout>


</LinearLayout>
